feat: implement endpoint react feature swagger
