# backend/openapi/paths.yaml
@@ -4963,6 +4963,112 @@ paths:
                     type: string
                     format: date-time
                     example: '2024-02-22T00:00:00.000Z'
+  /rooms/{id}/messages/{messageId}/react:
+    post:
+      tags:
+        - room
+      summary: Accept a room invitation
+      description: Allows a user to accept an invitation to enter a specific chat room.
+      operationId: acceptInvitation
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The unique identifier of the invitation to accept.
+          schema:
+            type: string
+            format: MongoId
+            example: 64be0ad2e43d2464394feedb
+        - name: messageId
+          in: path
+          required: true
+          description: The unique identifier of the invitation to accept.
+          schema:
+            type: string
+            format: MongoId
+            example: 64be0ad2e43d2464394feedb
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - content
+              properties:
+                emote:
+                  type: string
+                  description: The content of the emote.
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: Invitation accepted successfully. Welcome to the room!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 200
+                  message:
+                    example: Invitation accepted successfully. Welcome to the room!
+                  dateTime:
+                    type: string
+                    format: date-time
+                    example: '2024-02-22T00:00:00.000Z'
+        '401':
+          description: You are not authorized to carry out this task
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 401
+                  message:
+                    example: You do not have permission to perform this task. Please login again!
+                  data:
+                    type: string
+                    example: ''
+                  dateTime:
+                    type: string
+                    format: date-time
+                    example: '2024-02-22T00:00:00.000Z'
+        '404':
+          description: Invitation not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 404
+                  message:
+                    example: Invitation not found
+                  dateTime:
+                    type: string
+                    format: date-time
+                    example: '2024-02-22T00:00:00.000Z'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 500
+                  message:
+                    example: Internal server error
+                  dateTime:
+                    type: string
+                    format: date-time
+                    example: '2024-02-22T00:00:00.000Z'
   /rooms/{id}/leave:
     post:
       tags:
@@ -5049,7 +5155,7 @@ paths:
                     type: string
                     format: date-time
                     example: '2024-02-22T00:00:00.000Z'
-  /rooms/invites/{inviteId}/accept:
+  /rooms/{inviteId}/accept:
     post:
       tags:
         - room
@@ -5091,7 +5197,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  statusCode: 
+                  statusCode:
                     type: integer
                     example: 401
                   message:
@@ -5104,7 +5210,7 @@ paths:
                     format: date-time
                     example: '2024-02-22T00:00:00.000Z'
         '404':
-          description: Room_id not found
+          description: Invitation not found
           content:
             application/json:
               schema:
@@ -5114,7 +5220,93 @@ paths:
                     type: integer
                     example: 404
                   message:
-                    example: Room_id not found
+                    example: Invitation not found
+                  dateTime:
+                    type: string
+                    format: date-time
+                    example: '2024-02-22T00:00:00.000Z'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 500
+                  message:
+                    example: Internal server error
+                  dateTime:
+                    type: string
+                    format: date-time
+                    example: '2024-02-22T00:00:00.000Z'
+  /rooms/{inviteId}/reject:
+    post:
+      tags:
+        - room
+      summary: Reject a room invitation
+      description: Allows a user to reject an invitation to enter a specific chat room.
+      operationId: rejectInvitation
+      parameters:
+        - name: inviteId
+          in: path
+          required: true
+          description: The unique identifier of the invitation to accept.
+          schema:
+            type: string
+            format: MongoId
+            example: 64be0ad2e43d2464394feedb
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: Invitation rejected successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 200
+                  message:
+                    example: Invitation accepted successfully. Welcome to the room!
+                  dateTime:
+                    type: string
+                    format: date-time
+                    example: '2024-02-22T00:00:00.000Z'
+        '401':
+          description: You are not authorized to carry out this task
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 401
+                  message:
+                    example: You do not have permission to perform this task. Please login again!
+                  data:
+                    type: string
+                    example: ''
+                  dateTime:
+                    type: string
+                    format: date-time
+                    example: '2024-02-22T00:00:00.000Z'
+        '404':
+          description: Invitaion not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 404
+                  message:
+                    example: Invitation not found
                   dateTime:
                     type: string
                     format: date-time
